--- a/for_dan.Rmd
+++ b/for_dan.Rmd
@@ -1,6 +1,17 @@
 ---
-title: "R Notebook"
+title: "PKBayes2: Electric Boogaloo"
+output: pdf_document
 ---
+
+
+```{r setup, include=FALSE}
+knitr::opts_chunk$set(echo = F, message = F, warning = F, fig.height = 4, fig.align ='center', dpi = 400, cache = F)
+
+```
+
+# Introduction
+
+This document is intended to get you up to speed on some of the modelling I've done with the new data we've recieved.  I'll compare subjects between the new and old data sets on covariates important to apixaban pharmacokinetics, and will exposit model structure as best I can.  I'll summarize the new model's predictive ability on a holdout set of 100 patients from the new data and compare this predictive ability to a simple log-linear model.
 
 
 ```{r}
@@ -9,9 +20,19 @@ library(posterior)
 library(tidybayes)
 library(tidyverse)
 library(patchwork)
+library(table1)
+library(lme4)
 
-register_knitr_engine(override = FALSE)
+theme_set(theme_classic())
 
+
+CHAINS = 12
+ITERS = 10000
+ADAPT_DELTA = 0.8
+SEED = 19920908
+set.seed(SEED)
+
+#Helpler functions
 make_rfx_plot<-function(draws, x, y, color){
   color_var = enquo(color)
   var_y = enquo(y)
@@ -23,7 +44,7 @@ make_rfx_plot<-function(draws, x, y, color){
   ggplot(aes(!!var_x, !!var_y))+
   geom_point(aes(color = !!color_var))
   
-}
+} 
 
 make_rfx_grid<-function(draws, y, color){
   a = make_rfx_plot(draws, weight, !!enquo(y), !!enquo(color))
@@ -35,265 +56,103 @@ make_rfx_grid<-function(draws, y, color){
 ```
 
 
-```{cmdstan, output.var = 'model'}
-functions{
-  // This is a helper function to compute the concentration curve given PK parameters
-    real conc_curve(real D, real t, real Cl, real ka, real ke){
-      real C = (0.5*D / Cl) * (ke * ka) / (ke - ka) * (exp(-ka * t) - exp(-ke * t));
-      
-      return C;
-  }
-}
-data{
-  int n; //Total number of observations
-  int subjectids[n]; //Subject idendification number as an integer.  Mine go from 1 - 36
-  int n_subjectids; //How many unique subjects do I have?
-  vector[n] time; //time at which subjects were observed?  Length N
-  real yobs[n]; //Observed concentraitons
-  
-  //Covars
-  vector[n] sex;
-  vector[n] weight;
-  vector[n] creatinine;
-  vector[n] age;
-  vector[n] D;
+# New vs. Old Data
 
+Shown in table 1 is a comparison of the new (i.e. from the clinic) and old (i.e. from Rommel's 2018 paper) study.  In general, subjects from the new data set are older and have higher searum creatinine, indicating poorer kidney function (ostensibly from being older, perhaps indicating confounding).
 
-}
-parameters{
-  
-  real  mu_cl;
-  real<lower=0> s_cl;                                                   
-  vector[n_subjectids] z_cl;
-  
-  real mu_tmax;
-  real<lower=0> s_t;
-  vector[n_subjectids] z_t;
+The old data contains 36 patients, each sampled multiple times.  Each patient was observed at the same time post dose, allowing us to estimate a reasonably complex model.  Each patient in the new data is observed at a different time, and is observed at most once.
 
-  real<lower=0, upper=1> phi;
-  real<lower=0, upper=1> kappa;
-  vector<lower=0, upper=1>[n_subjectids] delays;
-  
-  real<lower=0> sigma;
-  
-  real mu_alpha;
-  real<lower=0> s_alpha;
-  vector[n_subjectids] z_alpha;
-  
-  real beta_cl_sex;
-  real beta_cl_weight;
-  real beta_cl_creatinine;
-  real beta_cl_age;
-  
-  
-}
-transformed parameters{
-  vector<lower=0>[n] Cl = exp(mu_cl + z_cl[subjectids]*s_cl + beta_cl_sex*sex + beta_cl_weight*weight + beta_cl_creatinine*creatinine + beta_cl_age*age);
-  vector<lower=0>[n] t = exp(mu_tmax + z_t[subjectids]*s_t);
-  vector<lower=0, upper=1>[n] alpha = inv_logit(mu_alpha + z_alpha[subjectids]*s_alpha);
-  vector<lower=0>[n]ka = log(alpha)./(t .* (alpha-1));
-  vector<lower=0>[n] ke = alpha .* log(alpha)./(t .* (alpha-1));
-  vector<lower=0>[n] delayed_time = time - 0.5*delays[subjectids];
-   
-  vector<lower=0>[n] C = (0.5*D ./ Cl) .* (ke .* ka) ./ (ke - ka) .* (exp(-ka .* delayed_time) -exp(-ke .* delayed_time));
-}
-model{
-  mu_tmax ~ normal(log(3.3), 0.25);
-  s_t ~ gamma(10, 100);
-  z_t ~ normal(0,1);
-  
-  mu_cl ~ normal(log(3.3),0.15);
-  s_cl ~ gamma(15,100);
-  z_cl ~ normal(0,1);
-  
-  
-  mu_alpha ~ normal(0,1);
-  s_alpha ~ gamma(10, 100);
-  z_alpha ~ normal(0,1);
-  
-  
-  phi ~ beta(20,20);
-  kappa ~ beta(20,20);
-  delays ~ beta(phi/kappa, (1-phi)/kappa);
-  
-  beta_cl_sex ~ student_t(3,0,2.5);
-  beta_cl_weight ~ student_t(3,0,2.5);
-  beta_cl_creatinine ~ student_t(3,0,2.5);
-  
-  sigma ~ lognormal(log(0.1), 0.2);
-  yobs ~ lognormal(log(C), sigma);
-}
-generated quantities{
-  vector<lower=0>[n] Cl_p = exp(mu_cl + beta_cl_sex*sex + beta_cl_weight*weight + beta_cl_creatinine*creatinine + beta_cl_age*age);
-  real<lower=0> t_p = exp(mu_tmax);
-  real<lower=0> alpha_p = inv_logit(mu_alpha);
-  real<lower=0>ka_p = log(alpha_p)/(t_p * (alpha_p-1));
-  real<lower=0>ke_p = alpha_p * log(alpha_p)/(t_p * (alpha_p-1));
-  vector<lower=0>[n] delayed_time_p = time - 0.5*phi;
-   
-  vector<lower=0>[n] C_p = (0.5*D ./ Cl_p) * (ke_p * ka_p) / (ke_p - ka_p) .* (exp(-ka_p * delayed_time_p) -exp(-ke_p * delayed_time_p));
-}
+```{r}
+concentration_data<-read_csv('data/combined_data.csv')
+table1(~ sex + age + weight + creatinine | study, data=distinct(concentration_data, subjectids, .keep_all = T))
+```
 
+# The Model
+
+Model structure is similar to our 2020 paper, with similar hyperpriors on all hyerparameters.  We estimate a random effect for each subject (even for those from the new data). Shown below is the full model structure:
+
+$$ \log(y_{i,j}) \vert t_j, D_i, Cl_i, k_{a,i}, k_{e,i}, \delta_i \sim \mathcal{N}(C(t_j), \sigma_y)  $$
+$$ C(t)  = \begin{cases} \dfrac{0.5 \times D}{Cl} \dfrac{k_e \times k_a}{k_e - k_a} \Big( \exp(k_a (t-\delta)) - \exp(k_e(t-\delta)) \Big) & t>\delta \\ 0 & \mbox{else} \end{cases}$$
+
+$$ k_{e,i} = \alpha_i k_{a,i} $$
+
+$$ k_{a,i} = \dfrac{\log(\alpha_i)}{t_{max,i}(\alpha_i-1)} $$
+
+$$ \alpha_i \sim \operatorname{Logit-Normal}(\mu_\alpha, \sigma_\alpha) $$
+
+$$ t_{max, i} \sim \operatorname{Log-Normal}(\mu_t, \sigma_t) $$
+
+$$ Cl_i \sim \operatorname{Log-Normal}(\mu_{Cl} + \mathbf{X}\beta, \sigma_{Cl}) $$
+
+$$ \delta_i \sim \operatorname{Beta}\Big( \dfrac{\phi}{\kappa}, \dfrac{(1-\phi)}{\kappa} \Big)$$
+
+$$ \beta \sim \operatorname{Student-T}(0, \nu=3)  $$
+
+We do not estimate the initial condition and assume that $y(0) = 0$. We make predictions for out of sample patients by integrating out the random effect and then taking expectations.  Note here that covariates only affect the clearance rate.  This can easily be extended so that covariates also affect average time to max concentration, or non-dimensional parameter $\alpha$.
+```{r}
+combined_data<-readRDS('fit_data/combined_Data.RDS')
+model = cmdstan_model(stan_file = 'models/big_model.stan')
+fit <- model$sample(combined_data, 
+                    chains = CHAINS, 
+                    seed = SEED, 
+                    adapt_delta = ADAPT_DELTA,
+                    parallel_chains = 4
+                    )
 ```
 
 ```{r}
-TEST_SIZE = 100
-CHAINS = 4
-ADAPT_DELTA = 0.9
-
-# This data combines both new and old data.  See the study column for an indcator from which set the obervation occurs
-concentration_data <- read_csv("data/combined_data.csv") %>% 
-                      mutate(sex = if_else(sex == 'male', 0, 1),
-                             yobs = yobs/1000 #Convert from ng/ml to mg/L
-                             )
-
-# A dataframe for unique subjects. Will need this for scaling covars
-unique_subjects <- distinct(concentration_data, subjectids, .keep_all = T)
-                  
-
-covar_means <- unique_subjects %>% 
-               select(age, creatinine, weight) %>% 
-               summarise_all(mean) %>% 
-               as.numeric
+draws = as_draws_df(fit$draws())
 
 
-covar_sd <- unique_subjects %>% 
-               select(age, creatinine, weight) %>% 
-               summarise_all(sd) %>% 
-               as.numeric
+predictions<-draws %>% 
+  spread_draws(CPRED[i]) %>% 
+  mean_qi
+predictions$yobs<-combined_data$test_yobs
 
-#Scale the covariates.  There may be a more sane way to do this, e.g. scaling  based on old data.
-concentration_data[, c('age','creatinine','weight')] <- scale(concentration_data[, c('age','creatinine','weight')], center = covar_means, scale = covar_sd)
-
-
-#reserve some subjects from the new data for test
-test_subjects<-unique_subjects %>% 
-               filter(study=='new') %>% 
-               sample_n(TEST_SIZE) %>% 
-               mutate(i = seq_along(subjectids))
-
-scaled_test_subjects<-test_subjects
-scaled_test_subjects[, c('age','creatinine','weight')] <- scale(scaled_test_subjects[, c('age','creatinine','weight')], center = covar_means, scale = covar_sd)
-
-train_subjects<- anti_join(unique_subjects, test_subjects, on = 'subjectids') %>% 
-                  mutate(i = seq_along(subjectids))
-
-model_data<-anti_join(concentration_data, test_subjects, by = 'subjectids') %>% 
-            mutate(subjectids = factor(subjectids)) %>% 
-            compose_data()
-
-fit <- model$sample(model_data, chains = CHAINS, adapt_delta = ADAPT_DELTA, parallel_chains = 4)
-draws <- as_draws_df(fit$draws())
-```
-
-```{r}
-make_rfx_grid(draws, z_cl, study)
-
-draws %>% 
-  spread_draws(C[i]) %>% 
-  mean_qi %>% 
-  bind_cols(anti_join(concentration_data, test_subjects, by = 'subjectids')) %>% 
-  ggplot(aes(yobs, C))+
-  geom_pointrange(aes(ymin = .lower, ymax = .upper),alpha = 0.25)+
+predictions %>% 
+  ggplot(aes(yobs, CPRED))+
+  geom_point()+
   geom_abline()
-```
 
-```{cmdstan, output.var = 'pred_model'}
-
-data{
-  int n; //Total number of observations
-  int subjectids[n]; //Subject idendification number as an integer.  Mine go from 1 - 36
-  int n_subjectids; //How many unique subjects do I have?
-  vector[n] time; //time at which subjects were observed?  Length N
-  real yobs[n]; //Observed concentraitons
+Metrics::rmse(predictions$CPRED, predictions$yobs)
   
-  //Covars
-  vector[n] sex;
-  vector[n] weight;
-  vector[n] creatinine;
-  vector[n] age;
-  vector[n] D;
-
-
-}
-parameters{
-  
-  real  mu_cl;
-  
-  real mu_tmax;
-
-  real phi;
-  
-  real mu_alpha;
-  
-  real beta_cl_sex;
-  real beta_cl_weight;
-  real beta_cl_creatinine;
-  real beta_cl_age;
-  
-}
-
-generated quantities{
-  vector<lower=0>[n] Clp = exp(mu_cl + beta_cl_sex*sex + beta_cl_weight*weight + beta_cl_creatinine*creatinine + beta_cl_age*age);
-  real<lower=0> tp = exp(mu_tmax);
-  real<lower=0> alphap = inv_logit(mu_alpha);
-  real<lower=0> kap = log(alphap)/(tp * (alphap-1));
-  real<lower=0> kep = alphap * kap;
-  vector<lower=0>[n] delayed_timep = time - 0.5*phi;
-   
-  vector<lower=0>[n] Cp = (0.5*D ./ Clp) * (kep * kap) / (kep - kap) .* (exp(-kap * delayed_timep) -exp(-kep * delayed_timep));
-}
-
 ```
 
 
 ```{r}
-pred_data<-scaled_test_subjects %>% 
-  mutate(subjectids = factor(subjectids)) %>% 
+training<-read_csv("fit_data/train_subjects.csv") %>% filter(study=='new')
+val<-read_csv("fit_data/test_subjects.csv")
 
-pred_model$generate_quantities(fit, data = pred_data)
+linmod <- lm(log(yobs) ~ time + sex + age + weight + creatinine + D , data = training)
 
+lm_predictions<-predict(linmod)
+sigma = Metrics::rmse(log(training$yobs), lm_predictions)
+lm_predictions<-exp(predict(linmod, newdata = val))*exp(sigma^2/2)
+
+Metrics::rmse(lm_predictions, val$yobs)
 ```
+
+
+
 ```{r}
-mcmc_program <- write_stan_tempfile(
-  "data {
-    int<lower=0> N;
-    real y[N];
-  }
-  parameters {
-    real theta;
-    real<lower=0> sigma;
-    
-  }
-  model {
-    theta ~ std_normal();
-    sigma ~ cauchy(0,1);
-    y ~ normal(theta, sigma);
-  }"
-)
-mod_mcmc <- cmdstan_model(mcmc_program)
+draws %>% 
+  select(contains('mu_')) %>% 
+  mutate(
+    tmax = exp(mu_tmax),
+    cl = exp(mu_cl),
+    alpha = plogis(mu_alpha)
+  ) %>% 
+  select(tmax, cl, alpha) %>% 
+  ggplot(aes(tmax, alpha))+
+  geom_point()
+```
 
-fit = mod_mcmc$sample(list(N = 25, y = rnorm(25, 10, 2)))
-
-gq_program <- write_stan_tempfile(
-  "data {
-    int<lower=0> N;
-  }
-  parameters {
-    real theta;
-    
-  }
-  generated quantities{
-    vector[N] y;
-    for (i in 1:N){
-      y[i] = normal_rng(theta,1);
-    }
-  }
-"
-)
-gq_mcmc <- cmdstan_model(gq_program)
-
-gq_mcmc$generate_quantities(fit, data = list(N = 100))
-
+```{r}
+fit$draws('beta_cl') %>% 
+  as_draws_df() %>% 
+  gather_draws(beta_cl[i], n = 2000) %>% 
+  ggplot(aes(.value))+
+  geom_histogram()+
+  facet_wrap(~i)
 ```
 
